// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/data has a default state 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": Array [],
}
`;

exports[`reducers/data reduces DATA_REQUEST 1`] = `
Object {
  "isLoading": true,
  "items": Array [],
  "things": Array [],
}
`;

exports[`reducers/data reduces DATA_REQUEST_ERROR 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": Array [],
}
`;

exports[`reducers/data reduces DATA_REQUEST_SUCCESS 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": Array [],
}
`;

exports[`reducers/data reduces DATA_UPDATED 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": undefined,
}
`;

exports[`reducers/data reduces RESET 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": Array [],
}
`;

exports[`reducers/data reduces nothing 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
  "things": Array [],
}
`;
